--- a/index.html
+++ b/index.html
@@ -1,11 +1,33 @@
 <html>
-    <head>
-        <
-        <title></title>
-    </head>
-    <body>
-<section>
-    
+
+<head>
+    <link rel="stylesheet" href="style.css">
+    <title>Showcase</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Redressed&display=swap" rel="stylesheet">
+
+</head>
+
+<body>
+    <section id="App">
+        <h1>Apps</h1>
+        <div class="line"></div>
+        <iframe width="352" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/TrO7N3-YUF34JW04Esk9iw1A6xfKFzryCUvNbMaxAFM/embed"></iframe>
+        <iframe width="352" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/dXi4pZl-Jc_h5oRpKrOvWSO6WXS5CqZrgWwPZgTUBzE/embed"></iframe>
     </section>
-    </body>
+    <section id="Games">
+        <h1>Games</h1>
+        <div class="line"></div>
+        <a href="https://studio.code.org/projects/spritelab/dwZtrp06XqLPFjIEKitUJ2IVRSqkg2LSGe8GfWbu7Q0" target="_blank">
+            <img src="https://studio.code.org/v3/files/dwZtrp06XqLPFjIEKitUJ2IVRSqkg2LSGe8GfWbu7Q0/.metadata/thumbnail.png">
+        </a>
+    </section>
+    <section id="ChatBot">
+        <h1>ChatBot</h1>
+        <div class="line"></div>
+        <iframe allow="microphone;" width="350" height="430" src="https://console.dialogflow.com/api-client/demo/embedded/dabe0d78-3040-4a76-b77c-b137bb36ce77">
+        </iframe>
+    </section>
+</body>
+
 </html>
